Updated Dependencies and Fixed the issue with inputs inside a parent folder